--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,14 @@ header img {
 .side-nav li, .main-nav li{
     display: inline-block;
     margin-right: 20px;
-
 }
 
 #black{
   color: #000;
 }
-
+.main-nav{
+  position: relative;
+}
 .main-nav button {
   border-radius: 10px;
   padding: 8px 12px;
@@ -40,4 +41,16 @@ header a {
 #btn-2{
   background-color: #000;
   color: #fff;
+}
+
+.dropdown-menu{
+  display: none;
+  position: absolute;
+  top: 100%;
+}
+.dropdown-menu ul {
+  padding: 0;
+}
+.dropdown-menu li {
+  display: block;
 }
