--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,37 @@ header a {
   display: none;
   position: absolute;
   top: 100%;
+  border: 1px solid #f4f9f9;
+  box-shadow: 2px 2px #f4f9f9;
+  border-radius: 5px;
+}
+
+.dropdown-visible{
+  display: block;
 }
 .dropdown-menu ul {
   padding: 0;
 }
 .dropdown-menu li {
   display: block;
+  color: #bbbbbb;
 }
-.features:hover{
-  display: flex;
-  justify-content: space-between;
+
+.sub-menu{
+  display: inline-block;
+  float: left;
+}
+.sub-menu li, .small-menu li{
+  margin-bottom: 5px;
+  margin-right: 5px;
+}
+
+.sub-menu li:first-child{
+  margin-bottom: 15px;
+}
+.sub-menu li:first-child:hover{
+    color: #bbbbbb;
+}
+.small-menu li:hover, .sub-menu li:hover {
+  color: #000;
 }
